# ToDo

./: .gitignore  pyproject.toml
core/: docker-compose.yaml  pyproject.toml
core/core/todos/: create_todo.py
core/docs/source/: conf.py  index.rst
core/source/: project_template.rst
core/tests/test_todos/: test_create_todo.py
docs/: pull_request_template.md
project_template/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
project_template/docs/source/: conf.py  index.rst
project_template/docs/source/_static/: main.css
