[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["A Justyniarski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
pytest-cov = "6.0.0"
mypy = "1.14.0"
sphinx = "8.1.3"
sphinx-rtd-theme = "3.0.2"
ruff = "0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra -q",
   "--cov=.",
   "--cov-config=.coveragerc",
   "--cov-report",
   "term-missing:skip-covered",
   "--cov-fail-under=80"
]
testpaths = [
    "tests",
    "integration",
]
markers = [
    "slow: mark test as slow.",
    "smoke: business core tests",
]

[tool.coverage.run]
omit = [
    "*/tests/*.py",
    "conftest/*"
]

[tool.ruff]
include = ["pyproject.toml", "template_project/**/*.py"]
line-length = 120

[tool.ruff.format]
exclude = ["docs"]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 50

[tool.mypy]
exclude = ["docs"]