[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["A Justyniarski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
markers = [
    "slow: mark test as slow.",
    "smoke: business core tests",
]
